--- a/index.html
+++ b/index.html
@@ -148,7 +148,35 @@
     <em>“What ideas should I explore?”</em><br /><br />
     The AI will respond thoughtfully to help you reflect and gain new insights.
   </p>
-  <iframe src="https://www.chatbase.co/chatbot-iframe/YOUR-BOT-ID-HERE"></iframe>
+  <script>
+  (function(){
+    if(!window.chatbase || window.chatbase("getState") !== "initialized"){
+      window.chatbase = (...args) => {
+        if(!window.chatbase.q) window.chatbase.q = [];
+        window.chatbase.q.push(args);
+      };
+      window.chatbase = new Proxy(window.chatbase, {
+        get(target, prop) {
+          if(prop === "q") return target.q;
+          return (...args) => target(prop, ...args);
+        }
+      });
+      const onLoad = () => {
+        const script = document.createElement("script");
+        script.src = "https://www.chatbase.co/embed.min.js";
+        script.id = "fXlQPn1nrS2kElMH1V11";
+        script.domain = "www.chatbase.co";
+        document.body.appendChild(script);
+      };
+      if(document.readyState === "complete"){
+        onLoad();
+      } else {
+        window.addEventListener("load", onLoad);
+      }
+    }
+  })();
+</script>
+
 </section>
 
 <section id="buy">
