--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <em>“What ideas should I explore?”</em><br /><br />
     The AI will respond thoughtfully to help you reflect and gain new insights.
   </p>
-  <script>
+  <script src="https://www.chatbase.co/embed.min.js" chatbotId="fXlQPn1nrS2kElMH1V11" domain="www.chatbase.co" defer></script>
   (function(){
     if(!window.chatbase || window.chatbase("getState") !== "initialized"){
       window.chatbase = (...args) => {
