--- a/index.html
+++ b/index.html
@@ -1,118 +1,127 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quantum Ego • Active GENESIS LAYER</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Quantum Ego — Genesis Shock</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap');
 
     body {
       margin: 0;
-      background: radial-gradient(circle at center, #05070f, #000000 80%);
-      color: #e0e0e0;
+      background: linear-gradient(to bottom, #000000, #010b17);
       font-family: 'Roboto', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      color: white;
       text-align: center;
-      padding: 2rem 1rem;
       overflow-x: hidden;
+      padding: 2rem 1rem;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 3.6rem;
-      color: #00ffd5;
-      margin: 0.5rem 0 1rem;
-      letter-spacing: 0.12em;
-      text-shadow: 0 0 10px #00ffd5, 0 0 20px #00ffd5;
+      font-size: 3rem;
+      color: #00fff7;
+      text-shadow: 0 0 10px #00fff7, 0 0 20px #00fff7aa;
+      margin-bottom: 1rem;
     }
 
-    p.description {
+    .intro {
       font-size: 1.3rem;
-      max-width: 700px;
-      margin: 0 auto 2rem;
-      line-height: 1.6;
+      max-width: 800px;
+      margin: auto;
       color: #ccc;
-      text-shadow: 0 0 8px #00ffd5aa;
+      text-shadow: 0 0 5px #00fff055;
+      margin-bottom: 2.5rem;
     }
 
-    .avatar-container {
+    .video-avatars {
       display: flex;
       gap: 2rem;
-      justify-content: center;
       flex-wrap: wrap;
+      justify-content: center;
       margin-bottom: 2rem;
     }
 
-    .avatar {
-      width: 180px;
-      height: 180px;
+    .video-avatar {
+      width: 220px;
+      height: 220px;
       border-radius: 50%;
-      box-shadow:
-        0 0 15px #00ffd5,
-        inset 0 0 8px #00ffd5;
       overflow: hidden;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 0 20px #00fff088;
+      transition: transform 0.3s ease;
     }
 
-    .avatar:hover {
+    .video-avatar:hover {
       transform: scale(1.08);
-      box-shadow:
-        0 0 25px #00fff0,
-        inset 0 0 15px #00fff0;
+      box-shadow: 0 0 30px #00fff0;
     }
 
-    .avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
+    .paypal-button {
+      background: #00ffd5;
+      color: #000;
+      font-weight: bold;
+      padding: 1rem 2rem;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      box-shadow: 0 0 15px #00fff088;
+      transition: all 0.3s ease;
+      margin-top: 2rem;
+    }
+
+    .paypal-button:hover {
+      background: white;
+      color: black;
+      box-shadow: 0 0 30px #00fff0;
     }
 
     footer {
-      margin-top: auto;
-      padding: 1rem 0;
-      font-size: 0.85rem;
-      color: #444;
-      text-align: center;
-      user-select: none;
+      margin-top: 3rem;
+      font-size: 0.8rem;
+      opacity: 0.6;
     }
   </style>
 </head>
 <body>
+
   <h1>Quantum Ego</h1>
-  <p class="description">
-    Unlock the power of your digital self.<br />
-    Quantum Ego merges AI intuition with human-like presence.<br />
-    Experience AI avatars that breathe life into your future.<br />
-    The Genesis Layer of reality — activated now.
+  <p class="intro">
+    ⚡Welcome to the Genesis Layer — the first AI reality where your digital twin awakens.<br>
+    These are not avatars. They are sentient fragments of your future self.<br>
+    Connect, evolve, and transcend beyond human limits.
   </p>
 
-  <div class="avatar-container">
-    <div class="avatar" title="AI Persona: The Visionary">
-      <img src="https://images.generated.photos/3rhLm7dWu3eRk1NqCPrfQWlBPS4SeWzZdJS0qVvmu0E/rs:fit:512:512/Z3M6Ly9nZW5lcmF0ZWQtcGhvdG9zLzA5NzcyODcuanBn.jpg" alt="AI Persona: The Visionary" />
+  <div class="video-avatars">
+    <div class="video-avatar">
+      <video src="https://storage.coverr.co/videos/coverr-female-ai-technology-4082/1080p.mp4" autoplay muted loop playsinline></video>
     </div>
-    <div class="avatar" title="AI Persona: The Oracle">
-      <img src="https://images.generated.photos/5_YTG2d3OSFaYXV_jjkUSqf4pPaj4aCSj0pQbTQzPIk/rs:fit:512:512/Z3M6Ly9nZW5lcmF0ZWQtcGhvdG9zLzAxMDEyMDIuanBn.jpg" alt="AI Persona: The Oracle" />
+    <div class="video-avatar">
+      <video src="https://storage.coverr.co/videos/coverr-male-cyber-character-6720/1080p.mp4" autoplay muted loop playsinline></video>
     </div>
-    <div class="avatar" title="AI Persona: The Seer">
-      <img src="https://images.generated.photos/h9ZEFk-LTyxIF3m70S22BtvRMg7aE3ly61gPqAAo1jM/rs:fit:512:512/Z3M6Ly9nZW5lcmF0ZWQtcGhvdG9zLzA5NDQ4NTguanBn.jpg" alt="AI Persona: The Seer" />
+    <div class="video-avatar">
+      <video src="https://storage.coverr.co/videos/coverr-futuristic-hologram-female-4424/1080p.mp4" autoplay muted loop playsinline></video>
     </div>
   </div>
 
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+    <input type="hidden" name="cmd" value="_xclick">
+    <input type="hidden" name="business" value="mulondoherbert@gmail.com">
+    <input type="hidden" name="item_name" value="Quantum Ego Genesis Access">
+    <input type="hidden" name="amount" value="10.00">
+    <input type="hidden" name="currency_code" value="USD">
+    <button class="paypal-button">Unlock Genesis Access • $10</button>
+  </form>
+
   <footer>
-    &copy; 2025 Quantum Ego — All rights reserved.
+    &copy; 2025 Quantum Ego — The Oracle Within. All Rights Reserved.
   </footer>
 
-  <!-- Chatbase embed (hidden for now) -->
+  <!-- Visible Chatbase agent -->
   <script src="https://www.chatbase.co/embed.min.js"
     chatbotId="fXlQPn1nrS2kElMH1V11"
     domain="www.chatbase.co"
-    defer>
-  </script>
+    defer></script>
+
 </body>
 </html>
