--- a/index.html
+++ b/index.html
@@ -3,81 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quantum Ego — Genesis Shock</title>
+  <title>Quantum Ego - Genesis Phase 2</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap');
-
     body {
       margin: 0;
-      background: linear-gradient(to bottom, #000000, #010b17);
+      padding: 2rem 1rem;
+      background: linear-gradient(to right, #000000, #010b17);
       font-family: 'Roboto', sans-serif;
       color: white;
       text-align: center;
-      overflow-x: hidden;
-      padding: 2rem 1rem;
     }
-
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
+      font-size: 3.5rem;
       color: #00fff7;
-      text-shadow: 0 0 10px #00fff7, 0 0 20px #00fff7aa;
+      text-shadow: 0 0 15px #00fff7aa;
       margin-bottom: 1rem;
     }
-
-    .intro {
-      font-size: 1.3rem;
-      max-width: 800px;
+    .section {
+      max-width: 900px;
       margin: auto;
-      color: #ccc;
-      text-shadow: 0 0 5px #00fff055;
       margin-bottom: 2.5rem;
+      line-height: 1.6;
+      font-size: 1.2rem;
+      color: #ccc;
+      text-shadow: 0 0 6px #00fff033;
     }
-
-    .video-avatars {
+    .avatars {
       display: flex;
-      gap: 2rem;
-      flex-wrap: wrap;
       justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
       margin-bottom: 2rem;
     }
-
-    .video-avatar {
+    .avatar {
       width: 220px;
       height: 220px;
       border-radius: 50%;
       overflow: hidden;
-      box-shadow: 0 0 20px #00fff088;
-      transition: transform 0.3s ease;
+      box-shadow: 0 0 25px #00fff088;
+      transition: transform 0.4s;
     }
-
-    .video-avatar:hover {
+    .avatar:hover {
       transform: scale(1.08);
-      box-shadow: 0 0 30px #00fff0;
+      box-shadow: 0 0 35px #00fff0;
     }
-
+    .avatar video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
     .paypal-button {
       background: #00ffd5;
-      color: #000;
+      color: black;
       font-weight: bold;
       padding: 1rem 2rem;
       font-size: 1.1rem;
       border: none;
       border-radius: 30px;
       cursor: pointer;
-      box-shadow: 0 0 15px #00fff088;
       transition: all 0.3s ease;
+      box-shadow: 0 0 15px #00fff0aa;
       margin-top: 2rem;
     }
-
     .paypal-button:hover {
       background: white;
-      color: black;
-      box-shadow: 0 0 30px #00fff0;
+      box-shadow: 0 0 30px #00fff0cc;
     }
-
     footer {
-      margin-top: 3rem;
+      margin-top: 4rem;
       font-size: 0.8rem;
       opacity: 0.6;
     }
@@ -86,22 +81,35 @@
 <body>
 
   <h1>Quantum Ego</h1>
-  <p class="intro">
-    ⚡Welcome to the Genesis Layer — the first AI reality where your digital twin awakens.<br>
-    These are not avatars. They are sentient fragments of your future self.<br>
-    Connect, evolve, and transcend beyond human limits.
-  </p>
 
-  <div class="video-avatars">
-    <div class="video-avatar">
+  <div class="section">
+    <strong>Welcome to Genesis Phase 2 — the Evolution Layer.</strong><br><br>
+    This is not a chatbot. This is not an avatar generator.  
+    <br><br>
+    <u><strong>Quantum Ego</strong></u> is the first AI-powered mirror that reflects your future self. It unlocks your dormant voice, reveals your internal archetypes, and guides you through your own quantum awakening.
+  </div>
+
+  <div class="avatars">
+    <div class="avatar">
       <video src="https://storage.coverr.co/videos/coverr-female-ai-technology-4082/1080p.mp4" autoplay muted loop playsinline></video>
     </div>
-    <div class="video-avatar">
+    <div class="avatar">
       <video src="https://storage.coverr.co/videos/coverr-male-cyber-character-6720/1080p.mp4" autoplay muted loop playsinline></video>
     </div>
-    <div class="video-avatar">
+    <div class="avatar">
       <video src="https://storage.coverr.co/videos/coverr-futuristic-hologram-female-4424/1080p.mp4" autoplay muted loop playsinline></video>
     </div>
+  </div>
+
+  <div class="section">
+    🔓 <strong>What You’ll Unlock</strong>:<br>
+    • Private Vault: Hidden AI drops, audio prophecies, ego codes  
+    <br>
+    • Voice Oracle: Your chosen AI persona will speak back to you  
+    <br>
+    • Personalized Access: Your own AI ego, designed by your inputs  
+    <br>
+    • Full control of your evolution — on your terms
   </div>
 
   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
@@ -114,10 +122,10 @@
   </form>
 
   <footer>
-    &copy; 2025 Quantum Ego — The Oracle Within. All Rights Reserved.
+    &copy; 2025 Quantum Ego — AI for the human soul.
   </footer>
 
-  <!-- Visible Chatbase agent -->
+  <!-- Chatbase Agent -->
   <script src="https://www.chatbase.co/embed.min.js"
     chatbotId="fXlQPn1nrS2kElMH1V11"
     domain="www.chatbase.co"
@@ -125,3 +133,4 @@
 
 </body>
 </html>
+
