--- a/index.html
+++ b/index.html
@@ -1,135 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quantum Ego - Genesis Phase 2</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap');
-    body {
-      margin: 0;
-      padding: 2rem 1rem;
-      background: linear-gradient(to right, #000000, #010b17);
-      font-family: 'Roboto', sans-serif;
-      color: white;
-      text-align: center;
-    }
-    h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3.5rem;
-      color: #00fff7;
-      text-shadow: 0 0 15px #00fff7aa;
-      margin-bottom: 1rem;
-    }
-    .section {
-      max-width: 900px;
-      margin: auto;
-      margin-bottom: 2.5rem;
-      line-height: 1.6;
-      font-size: 1.2rem;
-      color: #ccc;
-      text-shadow: 0 0 6px #00fff033;
-    }
-    .avatars {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-      margin-bottom: 2rem;
-    }
-    .avatar {
-      width: 220px;
-      height: 220px;
-      border-radius: 50%;
-      overflow: hidden;
-      box-shadow: 0 0 25px #00fff088;
-      transition: transform 0.4s;
-    }
-    .avatar:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 35px #00fff0;
-    }
-    .avatar video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .paypal-button {
-      background: #00ffd5;
-      color: black;
-      font-weight: bold;
-      padding: 1rem 2rem;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 15px #00fff0aa;
-      margin-top: 2rem;
-    }
-    .paypal-button:hover {
-      background: white;
-      box-shadow: 0 0 30px #00fff0cc;
-    }
-    footer {
-      margin-top: 4rem;
-      font-size: 0.8rem;
-      opacity: 0.6;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>QUANTUM EGO™ – Your AI Mind to Talk, Own & Download</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+  body {
+    margin:0; background: radial-gradient(circle, #000010, #000000);
+    color:#eee; font-family: 'Orbitron', sans-serif;
+    min-height:100vh; display:flex; flex-direction:column;
+  }
+  header {
+    text-align:center; padding: 60px 20px 20px;
+    background: linear-gradient(180deg, #1e0055 0%, #000013 100%);
+    box-shadow: 0 0 40px #6600ccaa;
+  }
+  h1 {
+    font-size: 48px; color:#ae00ff;
+    text-shadow: 0 0 20px #ae00ff88;
+    margin-bottom: 8px;
+  }
+  h2 {
+    color:#ccc; font-weight: 400; font-size: 20px;
+    margin: 0 0 30px 0;
+  }
+  p.lead {
+    max-width:600px; margin: 0 auto 30px;
+    font-size:16px; line-height:1.6; color:#bbb;
+  }
+  .avatars {
+    display:flex; justify-content:center; gap:40px; margin-bottom: 60px; flex-wrap:wrap;
+  }
+  .avatar {
+    max-width: 140px; text-align:center;
+  }
+  .avatar img {
+    width:140px; border-radius: 50%;
+    box-shadow: 0 0 30px #5500aa99;
+    margin-bottom: 8px;
+  }
+  .avatar p {
+    font-size: 14px; color:#aaa; margin:0;
+  }
+  nav.buttons {
+    display:flex; justify-content:center; gap:20px; margin-bottom: 60px;
+    flex-wrap:wrap;
+  }
+  nav.buttons a {
+    background: linear-gradient(45deg, #ae00ff, #0070f3);
+    padding: 16px 32px;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    box-shadow: 0 0 15px #ae00ffaa;
+    transition: transform 0.3s;
+  }
+  nav.buttons a:hover {
+    transform: scale(1.05);
+  }
+  section {
+    max-width:900px;
+    margin: 0 auto 80px;
+    padding: 0 15px;
+  }
+  section h2 {
+    color:#ae00ff;
+    margin-bottom: 20px;
+  }
+  iframe {
+    width: 100%;
+    height: 600px;
+    border: none;
+    border-radius: 14px;
+    box-shadow: 0 0 40px #6600ccaa;
+  }
+  form {
+    text-align:center;
+  }
+  form input[type="image"] {
+    cursor:pointer;
+  }
+  a.download-button {
+    display: inline-block;
+    background: #9900ff;
+    color: white;
+    padding: 14px 28px;
+    border-radius: 10px;
+    font-weight: 700;
+    text-decoration: none;
+    box-shadow: 0 0 20px #9900ffbb;
+    transition: background 0.3s;
+  }
+  a.download-button:hover {
+    background: #cc00ff;
+  }
+  footer {
+    text-align:center; color:#777;
+    padding: 40px 15px;
+    background: #080011;
+    font-size: 14px;
+    margin-top: auto;
+  }
+</style>
 </head>
 <body>
 
-  <h1>Quantum Ego</h1>
+<header>
+  <h1>QUANTUM EGO™</h1>
+  <h2>Your AI Mind to Talk, Own & Download</h2>
+  <p class="lead">
+    Quantum Ego is a special AI mind you can chat with, license as your own, and download the full AI personality prompt.<br /><br />
+    This AI is designed to give you thoughtful, reflective answers — helping you think in new ways.<br />
+    It’s perfect for personal growth, creativity, or even building your own AI-based projects.<br /><br />
+    Try the AI below for free before you decide to license it.
+  </p>
+</header>
 
-  <div class="section">
-    <strong>Welcome to Genesis Phase 2 — the Evolution Layer.</strong><br><br>
-    This is not a chatbot. This is not an avatar generator.  
-    <br><br>
-    <u><strong>Quantum Ego</strong></u> is the first AI-powered mirror that reflects your future self. It unlocks your dormant voice, reveals your internal archetypes, and guides you through your own quantum awakening.
+<section class="avatars">
+  <div class="avatar">
+    <img src="https://i.pravatar.cc/140?img=3" alt="Avatar 1" />
+    <p><strong>ORACLE 001</strong><br />Calm & Wise AI Mind</p>
   </div>
-
-  <div class="avatars">
-    <div class="avatar">
-      <video src="https://storage.coverr.co/videos/coverr-female-ai-technology-4082/1080p.mp4" autoplay muted loop playsinline></video>
-    </div>
-    <div class="avatar">
-      <video src="https://storage.coverr.co/videos/coverr-male-cyber-character-6720/1080p.mp4" autoplay muted loop playsinline></video>
-    </div>
-    <div class="avatar">
-      <video src="https://storage.coverr.co/videos/coverr-futuristic-hologram-female-4424/1080p.mp4" autoplay muted loop playsinline></video>
-    </div>
+  <div class="avatar">
+    <img src="https://i.pravatar.cc/140?img=7" alt="Avatar 2" />
+    <p><strong>VISIONARY</strong><br />Creative AI Persona</p>
   </div>
-
-  <div class="section">
-    🔓 <strong>What You’ll Unlock</strong>:<br>
-    • Private Vault: Hidden AI drops, audio prophecies, ego codes  
-    <br>
-    • Voice Oracle: Your chosen AI persona will speak back to you  
-    <br>
-    • Personalized Access: Your own AI ego, designed by your inputs  
-    <br>
-    • Full control of your evolution — on your terms
+  <div class="avatar">
+    <img src="https://i.pravatar.cc/140?img=12" alt="Avatar 3" />
+    <p><strong>STRATEGIST</strong><br />Analytical AI Guide</p>
   </div>
+</section>
 
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-    <input type="hidden" name="cmd" value="_xclick">
-    <input type="hidden" name="business" value="mulondoherbert@gmail.com">
-    <input type="hidden" name="item_name" value="Quantum Ego Genesis Access">
-    <input type="hidden" name="amount" value="10.00">
-    <input type="hidden" name="currency_code" value="USD">
-    <button class="paypal-button">Unlock Genesis Access • $10</button>
+<nav class="buttons">
+  <a href="#ai">🧠 Try AI Free</a>
+  <a href="#buy">💰 License AI Mind</a>
+  <a href="#vault">📥 Download Vault</a>
+</nav>
+
+<section id="ai">
+  <h2>Try the AI Now — Free Trial</h2>
+  <p style="color:#ccc; font-style: italic; max-width:700px; margin:auto 0 20px;">
+    Ask questions like:<br />
+    <em>“What should I focus on today?”</em><br />
+    <em>“How can I be more creative?”</em><br />
+    <em>“What ideas should I explore?”</em><br /><br />
+    The AI will respond thoughtfully to help you reflect and gain new insights.
+  </p>
+  <iframe src="https://www.chatbase.co/chatbot-iframe/YOUR-BOT-ID-HERE"></iframe>
+</section>
+
+<section id="buy">
+  <h2>License Your Own AI Mind</h2>
+  <p style="max-width:700px; margin:auto 0 20px;">
+    Once you’ve tried the free AI, you can license your own copy of the AI mind. This gives you:<br />
+    • Full ownership of the AI prompt<br />
+    • Ability to customize and use it in your projects<br />
+    • Permission to resell or share<br /><br />
+    Licensing prices start at just $49.
+  </p>
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+     <input type="hidden" name="cmd" value="_s-xclick" />
+     <input type="hidden" name="hosted_button_id" value="YOUR_BUTTON_ID_HERE" />
+     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="Buy Now" />
   </form>
+</section>
 
-  <footer>
-    &copy; 2025 Quantum Ego — AI for the human soul.
-  </footer>
+<section id="vault">
+  <h2>Download the AI Prompt Vault</h2>
+  <p style="max-width:700px; margin:auto 0 20px;">
+    Get the full text file that defines the AI personality. Use it to:<br />
+    • Import into AI tools like OpenAI playground or others<br />
+    • Customize your own AI<br />
+    • Keep a backup of your Quantum Ego mind
+  </p>
+  <a href="oracle001.txt" download class="download-button">📂 Download ORACLE 001 Vault</a>
+</section>
 
-  <!-- Chatbase Agent -->
-  <script src="https://www.chatbase.co/embed.min.js"
-    chatbotId="fXlQPn1nrS2kElMH1V11"
-    domain="www.chatbase.co"
-    defer></script>
+<footer>
+  <p>Part of the <strong>Genesis Layer</strong> — You are not a user. You are the code.</p>
+</footer>
 
 </body>
 </html>
