Added working PayPal button below footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+ <!-- Orbitron Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+
+<!-- Custom Styling -->
+<style>
+  body {
+    margin: 0;
+    background: radial-gradient(circle, #000010, #000000);
+    font-family: 'Orbitron', sans-serif;
+    color: white;
+    text-align: center;
+    padding: 50px;
+  }
+
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 1.2rem;
+    margin-bottom: 40px;
+  }
+</style>
+ 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>QUANTUM EGO™ – Your AI Mind to Talk, Own & Download</title>
 <style>
@@ -181,6 +206,19 @@
 <footer>
   <p>Part of the <strong>Genesis Layer</strong> — You are not a user. You are the code.</p>
 </footer>
+  
+<!-- PayPal Button Container -->
+<div id="paypal-container-HB4P8NJLJHNS2"></div>
+
+<!-- PayPal SDK Script -->
+<script src="https://www.paypal.com/sdk/js?client-id=BAAw9XjJTdFGwSUCa3dkveerg5RU0cD2p0NuUNJHC9hbJAtQCwXqUPvzNfrTE0FgmNVxWVAP3R6wqf6bXE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
+
+<!-- PayPal Button Render -->
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "HB4P8NJLJHNS2"
+  }).render("#paypal-container-HB4P8NJLJHNS2");
+</script>
 
 </body>
 </html>
