--- a/index.html
+++ b/index.html
@@ -1,224 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
- <!-- Orbitron Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Quantum Ego</title>
 
-<!-- Custom Styling -->
-<style>
-  body {
-    margin: 0;
-    background: radial-gradient(circle, #000010, #000000);
-    font-family: 'Orbitron', sans-serif;
-    color: white;
-    text-align: center;
-    padding: 50px;
-  }
+  <!-- Orbitron Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
 
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 20px;
-  }
+  <style>
+    body {
+      margin: 0;
+      background: radial-gradient(circle, #000010, #000000);
+      font-family: 'Orbitron', sans-serif;
+      color: white;
+      text-align: center;
+      padding: 60px;
+    }
 
-  p {
-    font-size: 1.2rem;
-    margin-bottom: 40px;
-  }
-</style>
- 
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>QUANTUM EGO™ – Your AI Mind to Talk, Own & Download</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
-  body {
-    margin:0; background: radial-gradient(circle, #000010, #000000);
-    color:#eee; font-family: 'Orbitron', sans-serif;
-    min-height:100vh; display:flex; flex-direction:column;
-  }
-  header {
-    text-align:center; padding: 60px 20px 20px;
-    background: linear-gradient(180deg, #1e0055 0%, #000013 100%);
-    box-shadow: 0 0 40px #6600ccaa;
-  }
-  h1 {
-    font-size: 48px; color:#ae00ff;
-    text-shadow: 0 0 20px #ae00ff88;
-    margin-bottom: 8px;
-  }
-  h2 {
-    color:#ccc; font-weight: 400; font-size: 20px;
-    margin: 0 0 30px 0;
-  }
-  p.lead {
-    max-width:600px; margin: 0 auto 30px;
-    font-size:16px; line-height:1.6; color:#bbb;
-  }
-  .avatars {
-    display:flex; justify-content:center; gap:40px; margin-bottom: 60px; flex-wrap:wrap;
-  }
-  .avatar {
-    max-width: 140px; text-align:center;
-  }
-  .avatar img {
-    width:140px; border-radius: 50%;
-    box-shadow: 0 0 30px #5500aa99;
-    margin-bottom: 8px;
-  }
-  .avatar p {
-    font-size: 14px; color:#aaa; margin:0;
-  }
-  nav.buttons {
-    display:flex; justify-content:center; gap:20px; margin-bottom: 60px;
-    flex-wrap:wrap;
-  }
-  nav.buttons a {
-    background: linear-gradient(45deg, #ae00ff, #0070f3);
-    padding: 16px 32px;
-    border-radius: 10px;
-    color: #fff;
-    font-weight: 700;
-    text-decoration: none;
-    box-shadow: 0 0 15px #ae00ffaa;
-    transition: transform 0.3s;
-  }
-  nav.buttons a:hover {
-    transform: scale(1.05);
-  }
-  section {
-    max-width:900px;
-    margin: 0 auto 80px;
-    padding: 0 15px;
-  }
-  section h2 {
-    color:#ae00ff;
-    margin-bottom: 20px;
-  }
-  iframe {
-    width: 100%;
-    height: 600px;
-    border: none;
-    border-radius: 14px;
-    box-shadow: 0 0 40px #6600ccaa;
-  }
-  form {
-    text-align:center;
-  }
-  form input[type="image"] {
-    cursor:pointer;
-  }
-  a.download-button {
-    display: inline-block;
-    background: #9900ff;
-    color: white;
-    padding: 14px 28px;
-    border-radius: 10px;
-    font-weight: 700;
-    text-decoration: none;
-    box-shadow: 0 0 20px #9900ffbb;
-    transition: background 0.3s;
-  }
-  a.download-button:hover {
-    background: #cc00ff;
-  }
-  footer {
-    text-align:center; color:#777;
-    padding: 40px 15px;
-    background: #080011;
-    font-size: 14px;
-    margin-top: auto;
-  }
-</style>
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 40px;
+    }
+  </style>
 </head>
 <body>
+  <h1>Welcome to Quantum Ego</h1>
+  <p>Unlock the AI Oracle Below</p>
 
-<header>
-  <h1>QUANTUM EGO™</h1>
-  <h2>Your AI Mind to Talk, Own & Download</h2>
-  <p class="lead">
-    Quantum Ego is a special AI mind you can chat with, license as your own, and download the full AI personality prompt.<br /><br />
-    This AI is designed to give you thoughtful, reflective answers — helping you think in new ways.<br />
-    It’s perfect for personal growth, creativity, or even building your own AI-based projects.<br /><br />
-    Try the AI below for free before you decide to license it.
-  </p>
-</header>
+  <!-- PayPal Button Container -->
+  <div id="paypal-container-9UBET3GUC4AJU"></div>
 
-<section class="avatars">
-  <div class="avatar">
-    <img src="https://i.pravatar.cc/140?img=3" alt="Avatar 1" />
-    <p><strong>ORACLE 001</strong><br />Calm & Wise AI Mind</p>
-  </div>
-  <div class="avatar">
-    <img src="https://i.pravatar.cc/140?img=7" alt="Avatar 2" />
-    <p><strong>VISIONARY</strong><br />Creative AI Persona</p>
-  </div>
-  <div class="avatar">
-    <img src="https://i.pravatar.cc/140?img=12" alt="Avatar 3" />
-    <p><strong>STRATEGIST</strong><br />Analytical AI Guide</p>
-  </div>
-</section>
+  <!-- PayPal SDK Script -->
+  <script src="https://www.paypal.com/sdk/js?client-id=BAAw9XjJTdFGwSUCa3dkveerg5RU0cD2p0NuUNJHC9hbJAtQCwXqUPvzNfrTE0FgmNVxWVAP3R6wqf6bXE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
 
-<nav class="buttons">
-  <a href="#ai">🧠 Try AI Free</a>
-  <a href="#buy">💰 License AI Mind</a>
-  <a href="#vault">📥 Download Vault</a>
-</nav>
-
-<section id="ai">
-  <h2>Try the AI Now — Free Trial</h2>
-  <p style="color:#ccc; font-style: italic; max-width:700px; margin:auto 0 20px;">
-    Ask questions like:<br />
-    <em>“What should I focus on today?”</em><br />
-    <em>“How can I be more creative?”</em><br />
-    <em>“What ideas should I explore?”</em><br /><br />
-    The AI will respond thoughtfully to help you reflect and gain new insights.
-  </p>
-  <iframe src="https://www.chatbase.co/chatbot-iframe/YOUR-BOT-ID-HERE"></iframe>
-</section>
-
-<section id="buy">
-  <h2>License Your Own AI Mind</h2>
-  <p style="max-width:700px; margin:auto 0 20px;">
-    Once you’ve tried the free AI, you can license your own copy of the AI mind. This gives you:<br />
-    • Full ownership of the AI prompt<br />
-    • Ability to customize and use it in your projects<br />
-    • Permission to resell or share<br /><br />
-    Licensing prices start at just $49.
-  </p>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-     <input type="hidden" name="cmd" value="_s-xclick" />
-     <input type="hidden" name="hosted_button_id" value="YOUR_BUTTON_ID_HERE" />
-     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="Buy Now" />
-  </form>
-</section>
-
-<section id="vault">
-  <h2>Download the AI Prompt Vault</h2>
-  <p style="max-width:700px; margin:auto 0 20px;">
-    Get the full text file that defines the AI personality. Use it to:<br />
-    • Import into AI tools like OpenAI playground or others<br />
-    • Customize your own AI<br />
-    • Keep a backup of your Quantum Ego mind
-  </p>
-  <a href="oracle001.txt" download class="download-button">📂 Download ORACLE 001 Vault</a>
-</section>
-
-<footer>
-  <p>Part of the <strong>Genesis Layer</strong> — You are not a user. You are the code.</p>
-</footer>
-  
-<!-- PayPal Button Container -->
-<div id="paypal-container-HB4P8NJLJHNS2"></div>
-
-<!-- PayPal SDK Script -->
-<script src="https://www.paypal.com/sdk/js?client-id=BAAw9XjJTdFGwSUCa3dkveerg5RU0cD2p0NuUNJHC9hbJAtQCwXqUPvzNfrTE0FgmNVxWVAP3R6wqf6bXE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
-
-<!-- PayPal Button Render -->
-<script>
-  paypal.HostedButtons({
-    hostedButtonId: "HB4P8NJLJHNS2"
-  }).render("#paypal-container-HB4P8NJLJHNS2");
-</script>
-
+  <!-- PayPal Button Render -->
+  <script>
+    paypal.HostedButtons({
+      hostedButtonId: "9UBET3GUC4AJU"
+    }).render("#paypal-container-9UBET3GUC4AJU");
+  </script>
 </body>
 </html>
