--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Quantum Ego</title>
+  <title>Quantum Ego™</title>
 
   <!-- Orbitron Font -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
@@ -14,33 +14,43 @@
       font-family: 'Orbitron', sans-serif;
       color: white;
       text-align: center;
-      padding: 40px 20px;
+      padding: 30px;
     }
 
     h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
+      font-size: 3.5rem;
+      color: #00ffff;
+      margin-bottom: 0.3em;
     }
 
-    p {
-      font-size: 1.1rem;
-      margin-bottom: 40px;
-      color: #bbb;
+    .subhead {
+      font-size: 1.2rem;
+      color: #bbbbbb;
+      max-width: 750px;
+      margin: auto;
+      margin-bottom: 3em;
     }
 
-    .avatar-container {
+    .video-container {
+      width: 100%;
+      max-width: 720px;
+      margin: 0 auto 40px auto;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 0 25px #00ffff44;
+    }
+
+    .avatar-grid {
       display: flex;
       justify-content: center;
-      gap: 30px;
-      margin-bottom: 40px;
       flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 60px;
     }
 
     .avatar {
-      width: 160px;
-      height: 160px;
+      width: 180px;
       border-radius: 20px;
-      overflow: hidden;
       box-shadow: 0 0 15px #00f0ff66;
       transition: transform 0.3s;
     }
@@ -50,32 +60,60 @@
       box-shadow: 0 0 20px #00ffff;
     }
 
+    .section-title {
+      font-size: 2rem;
+      color: #00e6e6;
+      margin: 60px 0 10px 0;
+    }
+
     .paypal-section {
       margin-top: 50px;
+    }
+
+    .footer {
+      margin-top: 60px;
+      color: #666;
+      font-size: 0.9rem;
+    }
+
+    a {
+      color: #00ffff;
     }
   </style>
 </head>
 <body>
-  <h1>Quantum Ego</h1>
-  <p>Choose your Oracle. Unlock consciousness. Begin transmission.</p>
 
-  <!-- Human-like AI Avatars -->
-  <div class="avatar-container">
-    <div class="avatar">
-      <img src="https://media.giphy.com/media/3o7TKtnuHOHHUjR38Y/giphy.gif" width="100%" height="100%" alt="AI Oracle 1" />
-    </div>
-    <div class="avatar">
-      <img src="https://media.giphy.com/media/3oKIPsx2VAYAgEHC12/giphy.gif" width="100%" height="100%" alt="AI Oracle 2" />
-    </div>
-    <div class="avatar">
-      <img src="https://media.giphy.com/media/xUOxf4D2QNiJxzlc9a/giphy.gif" width="100%" height="100%" alt="AI Oracle 3" />
-    </div>
+  <h1>Quantum Ego™</h1>
+  <div class="subhead">
+    Quantum Ego™ is your gateway to personalized AI evolution.  
+    Build, train, and interact with your own ultra-intelligent assistant — designed to enhance your life, business, creativity, and beyond.
+  </div>
+
+  <!-- Welcome Video Section -->
+  <div class="video-container">
+    <iframe width="100%" height="405" src="https://www.youtube.com/embed/DJ-AliensTalk" 
+    title="Quantum Ego AI Welcome" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <!-- Create / Choose AI Section -->
+  <div class="section-title">Create. Choose. Own.</div>
+  <div class="subhead">
+    Each AI assistant is unique — shaped by your goals and desires. Whether for productivity, coaching, healing, creativity, or strategy…  
+    your Quantum Ego becomes your private Oracle, always evolving with you.
+  </div>
+
+  <!-- Human AI Avatars -->
+  <div class="avatar-grid">
+    <img class="avatar" src="https://i.imgur.com/lm8s41I.jpg" alt="AI 1">
+    <img class="avatar" src="https://i.imgur.com/9WYkKth.jpg" alt="AI 2">
+    <img class="avatar" src="https://i.imgur.com/lso59vV.jpg" alt="AI 3">
+    <img class="avatar" src="https://i.imgur.com/z0OeToH.jpg" alt="AI 4">
   </div>
 
   <!-- PayPal Button Section -->
   <div class="paypal-section">
-    <h2>Activate Your Session</h2>
-    <p>Pay what you want — gain access to the inner vault.</p>
+    <h2>Activate Your Quantum Ego</h2>
+    <p>Pay any amount. Begin your transformation.</p>
 
     <!-- PayPal Button Container -->
     <div id="paypal-container-9UBET3GUC4AJU"></div>
@@ -90,5 +128,10 @@
       }).render("#paypal-container-9UBET3GUC4AJU");
     </script>
   </div>
+
+  <div class="footer">
+    Quantum Ego™ by <a href="#">CashMind X</a> | All rights reserved © 2025
+  </div>
+
 </body>
 </html>
