--- a/index.html
+++ b/index.html
@@ -124,9 +124,12 @@
   </div>
   <a class="get-started" href="#packages">Get Started</a>
 
-  <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/DJ-AliensTalk?autoplay=1&mute=1&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media"></iframe>
-  </div>
+  <div class="video-block" style="margin-top: 40px;">
+  <video autoplay muted playsinline controls style="max-width: 720px; width: 100%; border-radius: 12px; box-shadow: 0 0 25px #00ffe733;">
+    <source src="welcome.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 
   <div class="section-title">Meet Your AI Avatars</div>
   <div class="avatar-grid">
